err/gitlabbuildvariables.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/gitlab'...
Listing './lib/python3.5/site-packages/gitlab/tests'...
Listing './lib/python3.5/site-packages/gitlab/v3'...
Listing './lib/python3.5/site-packages/gitlab/v4'...
Listing './lib/python3.5/site-packages/gitlabbuildvariables'...
Listing './lib/python3.5/site-packages/gitlabbuildvariables/executables'...
Listing './lib/python3.5/site-packages/gitlabbuildvariables/tests'...
Compiling './lib/python3.5/site-packages/gitlabbuildvariables/tests/_common.py'...
***   File "./lib/python3.5/site-packages/gitlabbuildvariables/tests/_common.py", line 93
    self._gitlab_location = f"http://{self._gitlab_service.host}:{self._gitlab_service.ports[_GITLAB_PORT]}"
                                                                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gitlabbuildvariables/tests/executables'...
Compiling './lib/python3.5/site-packages/gitlabbuildvariables/tests/executables/test_gitlab_set_variables.py'...
***   File "./lib/python3.5/site-packages/gitlabbuildvariables/tests/executables/test_gitlab_set_variables.py", line 30
    exports += "\n".join({f"export {key}={value}" for key, value in EXAMPLE_VARIABLES_1.items()})
                                                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/gitlabbuildvariables/update'...
Listing './lib/python3.5/site-packages/gitlabbuildvariables-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/py_dictdiffer-1.0.egg-info'...
Listing './lib/python3.5/site-packages/python_gitlab-1.2.0.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
